# fleet-svc

./: .gitignore  README.md  RECOVERY.md  WorkstationConfig.yaml  pyproject.toml
.githooks/: pre-push
fleet/: __init__.py  actions.py  auth.py  cli.py  core.py  deploy.py  diagnostics.py  display.py  git_cli.py  git_state.py  host_health.py  lifecycle.py  model_svc.py  models.py  pr_report.py  server.py  state.py
fleet/contrib/: __init__.py  odysseus.py
fleet/sources/: __init__.py  base.py  delightd.py  docker_source.py  envoy.py  kube_source.py  traefik.py  transparent.py
skills/pr-report/: SKILL.md  pr-report
tests/: conftest.py  test_actions.py  test_auth.py  test_cli.py  test_core.py  test_deploy.py  test_diagnostics.py  test_display.py  test_git_state.py  test_host_health.py  test_lifecycle.py  test_model_svc.py  test_models.py  test_pr_report.py  test_server.py  test_sources.py  test_state.py
