[project]
name = "fleet"
version = "0.1.0"
description = "Local fleet management tool — aggregates service state from delightd, Docker, Kubernetes, Traefik, and Envoy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "docker>=7.0",
    "kubernetes>=29.0",
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
    "cryptography>=42.0",
    "starlette>=0.37",
    "uvicorn>=0.29",
    "fastapi>=0.136.3",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "respx>=0.21",
]

[project.scripts]
fleet = "fleet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.3.1",
    "respx>=0.23.1",
]

# a per-test wall-clock ceiling so a hung test fails fast instead of spinning the
# host into swap-death (the OOM root cause in #3 was a never-EOF mock that looped
# yaml.safe_load forever). 60s is far above any real unit test here; only a
# genuine hang trips it. the thread method works without signals/marks.
[tool.pytest.ini_options]
timeout = 60
timeout_method = "thread"
